<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    tools:openDrawer="start"
    android:id="@+id/drawerMain"
    android:fitsSystemWindows="true"
    >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:fitsSystemWindows="true"/>

        <ImageView
            android:fitsSystemWindows="true"
            android:id="@+id/marcador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/estrela_mapa"
            android:src="@mipmap/marker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:fitsSystemWindows="true"
            android:id="@+id/btMarcar"
            android:layout_width="208dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:onClick="onClick"
            android:text="@string/botao_marcador_marker_maps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:fitsSystemWindows="true"
            android:id="@+id/btDesmarca"
            android:layout_width="208dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/btMarcar"
            android:onClick="onClick"
            android:text="@string/botao_desmarcador_marker_maps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btMarcar" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tBar"
            android:layout_width="394dp"
            android:layout_height="64dp"
            android:layout_marginTop="68dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@+id/map"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="17dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        ></androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_nav_drawer_header"
        app:menu="@menu/menu_pet"/>

</androidx.drawerlayout.widget.DrawerLayout>